@@ -7,6 +7,11 @@ using `glibc' in the "product" field.
 
 Version 2.34.1
 
+Deprecated and removed features, and other changes affecting compatibility:
+
+* The function getdirentries is now deprecated, applications should use
+  either getdents64, readdir64 or readdir.
+
 The following bugs are resolved with this release:
 
   [12889] nptl: Fix race between pthread_kill and thread exit
